updates restUtil